# sql-query

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.postgres.yml  main.py  pyproject.toml
.specify/memory/: constitution.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: connections.py  generation.py  metadata.py  queries.py
backend/app/db/: sqlite.py
backend/app/models/: __init__.py  common.py  connection.py  metadata.py  query.py
backend/app/services/: connection_manager.py  database_driver.py  encryption.py  query_executor.py  query_validator.py  sql_generator.py
backend/app/services/drivers/: __init__.py  mysql_driver.py  postgres_driver.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  message.ts
frontend/src/components/: connectionForm.tsx  metadataBrowser.tsx  resultTable.tsx  sqlEditor.tsx
frontend/src/pages/: connectionList.tsx  databaseExplorer.tsx  queryWorkspace.tsx
frontend/src/types/: index.ts
init-scripts/: 01_schema.sql
specs/: institution.md
specs/001-sql-query-tool/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-sql-query-tool/checklists/: requirements.md
specs/001-sql-query-tool/contracts/: api.md
